--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "anchor-build": "cd apps/contract anchor build",
+    "get-types": "cp apps/contract/target/types/forms_contract.ts apps/web/anchor/",
+    "get-idl": "cp apps/contract/target/idl/forms_contract.json apps/web/anchor"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
